tests/typechecking/invalid/tuple_unbalance.ml
let rec f x = (x, x + 1) in
let (x, y, z) = f 3 in
()
